fix: separated selectors and properties by line wrapping in css file according to rule 3.8

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@
   width: 100%;
 }
 
-.header-info .info-link {
+.header-info
+.info-link {
   font-family: fantasy, cursive;
 }
 
@@ -149,7 +150,8 @@
 }
 
 /* Completed */
-#completed-tasks .li-label {
+#completed-tasks
+.li-label {
   text-decoration: line-through;
   color: #888;
 }
@@ -159,11 +161,13 @@
   display: none;
 }
 
-.edit-mode .input-new-task {
+.edit-mode
+.input-new-task {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .li-label {
+.edit-mode
+.li-label {
   display: none;
 }
